<resources>
    <string name="app_name">Utek App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_avatar">User Avatar</string>
    <string name="username_text">Aji Respati</string>
    <string name="user_email_text">aji.b.respati@gmail.com</string>
    <string name="user_phone_text">+62 812 3456 7890</string>
    <string name="your_channel_text">Your channel</string>
    <string name="account_text">Account</string>
    <string name="app_member_image">app member image</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</string>
    <string name="phone_or_email_or_username">Phone or Email or Username</string>
    <string name="password_text">Password</string>
</resources>
