<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screen.memberdetail.AppMemberDetailFragment">

    <data>
        <variable
            name="viewModel"
            type="com.utek.android.utekapp.screen.memberdetail.AppMemberDetailViewModel" />
    </data>

    <ScrollView
        android:id="@+id/fragment_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/account_constraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/user_avatar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/user_avatar"
                app:imageUrl="@{viewModel.selectedAppMember.imgSrcUrl}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/username_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@{viewModel.selectedAppMember.type}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_avatar"
                tools:text="Username" />

            <TextView
                android:id="@+id/user_email_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@{String.valueOf((int)viewModel.selectedAppMember.price)}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username_text"
                tools:text="satu@dua.com" />

            <TextView
                android:id="@+id/user_phone_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/user_phone_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_email_text" />

            <View
                android:id="@+id/user_divider1"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="?android:attr/listDivider"
                android:paddingBottom="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_phone_text" />

            <TextView
                android:id="@+id/channel_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/account"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:text="@string/your_channel_text"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_divider1" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>